--- a/app/src/main/res/layout/fragment_view_breakfast.xml
+++ b/app/src/main/res/layout/fragment_view_breakfast.xml
@@ -63,26 +63,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/create_food_btn" />
 
-        <ScrollView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:paddingBottom="65dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/food_label">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview_food"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="0dp"
-                android:theme="@style/recycler_view"
-                tools:listitem="@layout/recyclerview_item" />
-        </ScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_food"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:theme="@style/recycler_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/create_food_btn"
+            tools:listitem="@layout/recyclerview_item" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
