--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -1,147 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:context=".createRecipeFragment">
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
+    tools:context=".CreateRecipeFragment">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/label_create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#015981"
-        android:paddingBottom="75dp">
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:text="Create Recipe"
+        android:theme="@style/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/title_createBreakfast"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/create_recipe"
-            android:theme="@style/title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="30sp"
+        android:layout_marginRight="20sp"
+        android:hint="Recipe type"
+        android:padding="20sp"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:singleLine="true"
 
-        <TextView
-            android:id="@+id/RecipeName"
-            android:layout_width="324dp"
-            android:layout_height="59dp"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="Recipe Name"
-            android:textSize="25dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_createBreakfast" />
+        />
 
-        <EditText
-            android:id="@+id/edit_RecipeName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:autofillHints=""
-            android:ems="10"
-            android:hint="e.g. Full English"
-            android:inputType="textPersonName"
-            android:theme="@style/edit_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/RecipeName"
-            app:layout_constraintTop_toBottomOf="@+id/RecipeName" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="30sp"
+        android:id="@+id/name"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:layout_marginRight="20sp"
+        android:hint="@string/recipe_name"
+        android:padding="20sp"
+        android:singleLine="true" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_RecipeName" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20sp"
+        android:id="@+id/ingredients"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="30sp"
+        android:layout_marginRight="20sp"
+        android:hint="Ingredients"
+        android:padding="20sp"
+        android:singleLine="true" />
 
-        <TextView
-            android:id="@+id/RecipeDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Recipe Date"
-            android:textSize="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/title_createBreakfast"
-            app:layout_constraintVertical_bias="0.28" />
-
-        <EditText
-            android:id="@+id/edit_RecipeStartDate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:ems="10"
-            android:hint="DD/MM/YYYY"
-            android:inputType="date"
-            android:theme="@style/edit_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/RecipeDate" />
-
-        <Button
-            android:id="@+id/RecipeStartDate"
-            android:layout_width="85dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="12dp"
-            android:background="@color/colorPrimaryLight"
-            android:text="SELECT DATE"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            app:layout_constraintBottom_toBottomOf="@+id/edit_RecipeStartDate"
-            app:layout_constraintEnd_toEndOf="@+id/edit_RecipeStartDate"
-            app:layout_constraintTop_toTopOf="@+id/edit_RecipeStartDate"
-            app:layout_constraintVertical_bias="0.0" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="30sp"
+        android:id="@+id/notes"
+        android:textSize="20dp"
+        android:layout_marginRight="20sp"
+        android:textColor="@color/black"
+        android:hint="Notes"
+        android:padding="20sp"
+        android:singleLine="true" />
 
 
-        <TextView
-            android:id="@+id/RecipeNotes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Recipe Notes"
-            android:textSize="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/title_createBreakfast"
-            app:layout_constraintVertical_bias="0.494" />
-
-        <EditText
-            android:id="@+id/edit_RecipeNotes"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Recipe Notes"
-            android:layout_marginTop="60dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_RecipeStartDate" />
-
-        <Button
-            android:id="@+id/btn_save"
-            android:layout_width="75dp"
-            android:layout_height="46dp"
-            android:background="#9C27B0"
-            android:text="Save"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="30dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30sp"
+        android:id="@+id/btn_save"
+        android:background="@color/colorPrimary"
+        android:text="SAVE"
+        android:paddingHorizontal="30sp"
+        android:textColor="#fff"
+        android:textSize="16sp" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
+
+
